[gd_scene load_steps=10 format=3 uid="uid://c52wniv8m0rdf"]

[ext_resource type="Script" uid="uid://gyeckm5rf3lg" path="res://Minigames/General/Scripts/minigame_htp.gd" id="1_r4mgk"]
[ext_resource type="Texture2D" uid="uid://fk42f75i5d46" path="res://Board/Assets/satalight.png" id="2_b7ohl"]
[ext_resource type="FontFile" uid="uid://0ru55rka61tc" path="res://MiscAssets/Fonts/HanleyPro-Sans.ttf" id="3_ktjhs"]
[ext_resource type="Texture2D" uid="uid://mymgsnnh3o0d" path="res://MiscAssets/Players/Icons/Penguin.png" id="4_lfe1i"]
[ext_resource type="Texture2D" uid="uid://c6sydx1qdtbmb" path="res://MiscAssets/ControllerIcons/xbox_button_color_a_filled.png" id="5_hg6wl"]

[sub_resource type="Animation" id="Animation_q2qps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fp2oq"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yosvi"]
resource_name = "fade_out"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qdx2"]
_data = {
&"RESET": SubResource("Animation_q2qps"),
&"fade_in": SubResource("Animation_fp2oq"),
&"fade_out": SubResource("Animation_yosvi")
}

[node name="MinigameHTP" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4mgk")
chosen_minigame = 1

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2qdx2")
}

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.27451, 0.196078, 0.164706, 1)

[node name="PictureBorder" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 138.0
offset_right = -705.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GamePicture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 144.0
offset_right = 1209.0
offset_bottom = 792.0
texture = ExtResource("2_b7ohl")
expand_mode = 1

[node name="GameName" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 28.0
offset_right = 1240.0
offset_bottom = 129.0
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 100
text = "Neighborhood Watch"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Label" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 794.0
offset_right = 1025.0
offset_bottom = 895.0
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 60
text = "Matt Bernardon"
vertical_alignment = 1

[node name="Origin" type="Label" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 855.0
offset_right = 1025.0
offset_bottom = 956.0
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 60
text = "SGDC Game Jam W"
vertical_alignment = 1

[node name="Static" type="Control" parent="."]
anchors_preset = 0
offset_top = 42.0
offset_right = 40.0
offset_bottom = 82.0

[node name="Controls" type="Label" parent="Static"]
layout_mode = 0
offset_left = 1078.0
offset_top = 573.0
offset_right = 2032.0
offset_bottom = 674.0
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 60
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line1" type="ColorRect" parent="Static"]
layout_mode = 0
offset_left = 1399.0
offset_top = 663.0
offset_right = 1713.0
offset_bottom = 670.0

[node name="Explain" type="Label" parent="."]
layout_mode = 0
offset_left = 1239.0
offset_top = 24.0
offset_right = 1900.0
offset_bottom = 616.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 55
text = "Aliens are invading the neighborhood! Shoot to eliminate them. Visit neighbors to collect more ammo. Last player standing is the winner!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Controls" type="Label" parent="."]
layout_mode = 0
offset_left = 1239.0
offset_top = 733.0
offset_right = 1900.0
offset_bottom = 1106.0
theme_override_constants/line_spacing = 15
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ktjhs")
theme_override_font_sizes/font_size = 50
text = "Left stick: Move 
Right stick: Aim
A: Shoot"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Icons" type="Control" parent="."]
anchors_preset = 0
offset_left = 451.0
offset_top = -12.0
offset_right = 491.0
offset_bottom = 28.0

[node name="Icon1" type="Sprite2D" parent="Icons"]
position = Vector2(289, 980)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_lfe1i")

[node name="Icon2" type="Sprite2D" parent="Icons"]
position = Vector2(449, 980)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_lfe1i")

[node name="Icon3" type="Sprite2D" parent="Icons"]
position = Vector2(609, 980)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_lfe1i")

[node name="Icon4" type="Sprite2D" parent="Icons"]
position = Vector2(769, 980)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_lfe1i")

[node name="Ready" type="Control" parent="."]
anchors_preset = 0
offset_left = 324.0
offset_top = -12.0
offset_right = 364.0
offset_bottom = 28.0

[node name="Ready1" type="Sprite2D" parent="Ready"]
position = Vector2(416, 980)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hg6wl")

[node name="Ready2" type="Sprite2D" parent="Ready"]
position = Vector2(576, 980)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hg6wl")

[node name="Ready3" type="Sprite2D" parent="Ready"]
position = Vector2(736, 980)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hg6wl")

[node name="Ready4" type="Sprite2D" parent="Ready"]
position = Vector2(896, 980)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hg6wl")

[node name="Black" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
